--- a/StrivrTest/.gitignore
+++ b/StrivrTest/.gitignore
@@ -63,5 +63,5 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
-Secrets.swift
+StrivrTest/Secrets.swift
 StrivrTest/.DS_Store
